# lux

./: .gitignore  LICENSE  README.md  logd.lua  luxctl.lua  luxd-run.lua  luxd.lua  meson.build  meson.options  rpc.lua  sys.c
lux/: meson.build  rpc.lua
net/: dhcp.lua  engine.lua  log.lua  meson.build  netctl.lua  netd.lua  ntpd.lua  rpc.lua  sys.c
services/: console.lua  logd.lua  netd.lua
subprojects/: libimsg.wrap
tests/: .shutdown.sh.swp  oneshot.sh  shutdown.sh  start_stop.sh  status.sh  stop_start.sh  target.sh
